Fix visible cards objectives

--- a/src/css/section-2.css
+++ b/src/css/section-2.css
@@ -145,7 +145,7 @@
         height: 160px;
         max-height: 500px;
         border-radius: 15px;
-        opacity: 0;
+        opacity: 1;
         transform: translateY(20px);
         transition: opacity 0.6s ease, transform 0.6s ease;
     }
